更新配置