@@ -1,7 +1,16 @@
 #!/bin/bash
-mainClass="pers.yzq.sliding.dataset.BulkLoad_Tweet"
+libs_dir="hdfs://node1:9000/libs"
+log_path="/opt/service/spark/slidingwindow/conf/log4j.properties"
 target="/opt/service/spark/slidingwindow/sliding/target/sliding-2.4.4.jar"
-lib="/opt/service/spark/lib"
 
-scala -classpath ${target} ${mainClass}
-# -Djava.ext.dirs=${lib}
+spark-submit \
+--master spark://node1:7079 \
+--executor-memory 16g \
+--executor-cores 16 \
+--driver-cores 16 \
+--driver-memory 16g \
+--class pers.yzq.sliding.dataset.BulkLoad_Tweet \
+--driver-java-options "-Dlog4j.configuration=file:${log_path}" \
+--jars \
+${libs_dir}/fastjson-1.2.35.jar \
+${target}
